updated default layout properties

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
    ---------------------------------------------------------*/
 
   gaia-drawer.host {
-    display: block;
-    position: relative;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
   }
 
