--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    pointer-events: none;
   }
 
   /** Inner
@@ -16,7 +17,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%
+    height: 100%;
   }
 
   /** Main
@@ -33,6 +34,7 @@
     transition: transform 300ms ease, visibility 300ms;
     will-change: transform;
     visibility: hidden;
+    pointer-events: auto;
   }
 
   /**
