Removes `pointer-events: none;` in the style.css
It seems that this style will cause the drawer unable to be closed
if the user click the background.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     pointer-events: none;
   }
 
+  gaia-drawer[open] {
+    pointer-events: auto;
+  }
+
   /** Inner
    ---------------------------------------------------------*/
 
